syntax = "proto3";
import "google/protobuf/empty.proto";
import "common.proto";
option java_multiple_files = true;
option java_package = "com.mercant.real.estate";
option java_outer_classname = "ZoneOmiGrpcProto";

package zone.omi;

service ZoneOmiGrpc {
  rpc allZoneOmi (google.protobuf.Empty) returns (stream ResponseZoneOmi) {}
  rpc allZoneOmiWithCondition(RequestZoneWithCondition) returns(stream ResponseZoneOmi){}
  rpc processFileWithConditionZone(RequestZoneWithCondition) returns(stream ResponseZoneOmi){}
}

message ResponseZoneOmi {
  common.omiValueAndZone.OmiZone omiZone = 1;
}
message RequestZoneWithCondition{
  string province = 1;
  string city = 2;
  string region = 3;
}